# alpaca

./: .dockerignore  BUILD.md  CMakeLists.txt  Dockerfile  INSTALL.md  LICENSE  README.md  alpaca.cpp  description.md  main.cpp  maxpre2.patch  sample.gr
